--- a/index.html
+++ b/index.html
@@ -5,27 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="container">
         <img src="/logo.png" class="logo">
         <div>
             <input type="text" id="name" placeholder="name">
-            <input type="email" id="" placeholder="email-id">
-            <input type="password" id="" placeholder="password">
-            <input type="text" id="" placeholder="Mobile Number">
-            <input type="checkbox" id="terms-and-conditions" placeholder="">
-            <label for=""></label>
-
+            <input type="email" id="email" placeholder="email-id">
+            <input type="password" id="password" placeholder="password">
+            <input type="text" id="mob-no" placeholder="Mobile Number">
+            <input type="checkbox" class="checkbox" id="terms-and-conditions">
+            <label for="terms-and-conditions">agree to our <a href="">terms and conditions</a></label>
+            <input type="checkbox" class="checkbox" id="notification">
+            <label for="notification">recieve upcoming offers and events mails</a></label>
+            <button class="submit-btn">Create account</button>
         </div>
+        <a href="" class="link">already have an account? Log in here</a>
     </div>
-
-
-
-
-
-
-
 
 </body>
 </html>
