sign-up html,css elements added

--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <img src="/logo.png" class="logo">
-        <div>
+     <div class="child-container">
+            <img src="/logo.png" class="logo">
             <input type="text" id="name" placeholder="name">
             <input type="email" id="email" placeholder="email-id">
             <input type="password" id="password" placeholder="password">
-            <input type="text" id="mob-no" placeholder="Mobile Number">
-            <input type="checkbox" class="checkbox" id="terms-and-conditions">
-            <label for="terms-and-conditions">agree to our <a href="">terms and conditions</a></label>
-            <input type="checkbox" class="checkbox" id="notification">
-            <label for="notification">recieve upcoming offers and events mails</a></label>
+            <input type="text" id="mob-no" placeholder="Mobile Number">          
+            <label for="terms-and-conditions"><input type="checkbox" class="checkbox">agree to our <a href="">terms and conditions</a></label>           
+            <label for="notification"><input type="checkbox" class="checkbox">upcoming offers and events mails</label>
             <button class="submit-btn">Create account</button>
-        </div>
+     
         <a href="" class="link">already have an account? Log in here</a>
     </div>
+</div>
 
 </body>
 </html>
