--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>Welcome user</p>
             <input type="email" id="email" placeholder="email-id">
             <input type="password" id="password" placeholder="password">
-            <button class="submit-btn">Login</button>
+            <button class="submit-btn-login">Login</button>
      
         <a href="" class="link">Don'have an account? Sign up here</a>
     </div>
