--- a/index.html
+++ b/index.html
@@ -6,21 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ecom-xpress</title>
     <link rel="stylesheet" href="/style.css">
-    <script src="https://kit.fontawesome.com/2ea00fb38c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://xpressui1.netlify.app/xPressUi.css">
 </head>
 <body>
     <nav class="navbar">
      <div class="nav">
-         <img src="/logo.png" class="brand-logo" alt="" >
+        <img src="/logo.png" class="brand-logo" alt="" >
         <div class="nav-items">
             <div class="search">
                 <input type="text" class="search-box">
                 <button class="search-btn">search</button>
             </div>
-            <a href="http://"><i class="gg-shopping-cart"></i></a>
-            <a href="http://"><i class="fa-solid fa-user"></i></a>
+            <a href="http://"><i class="glyphicon glyphicon-user"></i></a>
+            <a href="http://"><i class="glyphicon glyphicon-shopping-cart"></i></a>
         </div>
-     </div>   
+     </div>  
+     
+     <ul class="links-container">
+        <li class="link-item"><a href="#" class="link">Login</a></li>
+        <li class="link-item"><a href="#" class="link">Home</a></li>
+        <li class="link-item"><a href="#" class="link">Product page</a></li>
+        <li class="link-item"><a href="#" class="link">Wishlist</a></li>
+        <li class="link-item"><a href="#" class="link">My Cart</a></li>
+    </ul>
     </nav>
+
+    <header class="hero-section">
+        <div class="content">
+            <!-- <img src="/logo.png" class="logo" alt=""> -->
+            <!-- <p class="sub-heading">best fashion collection of all time</p> -->
+        </div>
+    </header>
+
 </body>
 </html>
