--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar">
         <div class="nav">
-           <img src="/logo.png" class="brand-logo" alt="" >
+           <!-- <img src="/logo.png" class="brand-logo" alt="" > -->
            <div class="nav-items">
                <div class="search">
                    <input type="text" class="search-box">
@@ -71,37 +71,88 @@
 
     <section class="product">
         <h2 class="product-category">best selling</h2>
-        <!-- <div class="product-container"> -->
-            <div class="card">
-                <div class="container">
-                    <div class="image img-text">
-                        <img src="/product-img.jpg" alt="rain-football-img" class="img" />
-                        <div class="text text-overlay">
-                            <h2>5 Ways Rain is Nostalgic</h2>
-                        </div>
-                    </div>
-                    <div class="para">
-                        Rains are a source of greenary,happy farming and nostalgia among others
-                    </div>
-                    <div class="card-buttons">
-                        <div class="card-btn">
-                            <button type="submit" class="btn card-btn-items">
-                                READ
-                            </button>
-                            <button type="submit" class="btn card-btn-items">
-                                BOOKMARK
-                            </button>
-                        </div>
-                        <div class="card-icons">
-                            <i class="fa fa-heart-o"></i>
-                            <i class="fa fa-share-alt"></i>
-                            <i class="fa fa-ellipsis-v"></i>
-                        </div>
-                    </div>
+        
+        <div class="product-container">
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to whislist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
                 </div>
             </div>
             
-        <!-- </div> -->
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to whislist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to whislist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to whislist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to whislist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to whislist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand</h2>
+                    <p class="product-short-des">a short line about the cloth..</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+
+        </div>
+
+
     </section> 
 
 </body>
