--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <div class="py-3">
             <h3 class="font-weight-bold">Rating</h3>
             <form class="rating">
-                <div> <span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star"></span><span class="fa fa-star"></span> </div>
-                <div> <span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span> </div>
-                <div> <span class="fa fa-star checked"></span><span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span><span class="fa fa-star"></span> </div>
+                <div class="rating1"> 5 Star <span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span></span><span class="fa fa-star checked"></span></span><span class="fa fa-star"></span> </div>
+                <div class="rating1"> 4 Star <span class="fa fa-star checked"></span><span class="fa fa-star checked"></span></span><span class="fa fa-star checked"></span></span><span class="fa fa-star"></span><span class="fa fa-star"></span> </div>
+                <div class="rating1"> 3 Star <span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span></span><span class="fa fa-star"></span><span class="fa fa-star"></span> </div>
             </form>
         </div>
     </div>
@@ -80,8 +80,8 @@
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <h2 class="product-brand">brand 1</h2>
+                    <p class="product-short-des">short description</p>
                     <span class="price">$20</span><span class="actual-price">$40</span>
                 </div>
             </div>
@@ -93,8 +93,8 @@
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <h2 class="product-brand">brand 2</h2>
+                    <p class="product-short-des">product description</p>
                     <span class="price">$20</span><span class="actual-price">$40</span>
                 </div>
             </div>
@@ -106,8 +106,8 @@
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <h2 class="product-brand">brand 3</h2>
+                    <p class="product-short-des">short description</p>
                     <span class="price">$20</span><span class="actual-price">$40</span>
                 </div>
             </div>
@@ -118,21 +118,8 @@
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="/product-img.jpg" class="product-thumb" alt="">
-                    <button class="card-btn">add to whislist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <h2 class="product-brand">brand 4</h2>
+                    <p class="product-short-des">short description</p>
                     <span class="price">$20</span><span class="actual-price">$40</span>
                 </div>
             </div>
@@ -144,8 +131,21 @@
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth..</p>
+                    <h2 class="product-brand">brand 5</h2>
+                    <p class="product-short-des">short description</p>
+                    <span class="price">$20</span><span class="actual-price">$40</span>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">50% off</span>
+                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <button class="card-btn">add to whislist</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">brand 6</h2>
+                    <p class="product-short-des">short description</p>
                     <span class="price">$20</span><span class="actual-price">$40</span>
                 </div>
             </div>
