--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://xpressui1.netlify.app/xPressUi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/2ea00fb38c.js" crossorigin="anonymous"></script>
 
 </head>
@@ -16,7 +15,6 @@
 
     <nav class="navbar">
         <div class="nav">
-           <!-- <img src="/logo.png" class="brand-logo" alt="" > -->
            <div class="nav-items">
                <div class="search">
                    <input type="text" class="search-box">
@@ -59,9 +57,9 @@
         <div class="py-3">
             <h3 class="font-weight-bold">Rating</h3>
             <form class="rating">
-                <div class="rating1"> 5 Star <span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span></span><span class="fa fa-star checked"></span></span><span class="fa fa-star"></span> </div>
-                <div class="rating1"> 4 Star <span class="fa fa-star checked"></span><span class="fa fa-star checked"></span></span><span class="fa fa-star checked"></span></span><span class="fa fa-star"></span><span class="fa fa-star"></span> </div>
-                <div class="rating1"> 3 Star <span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span></span><span class="fa fa-star"></span><span class="fa fa-star"></span> </div>
+                <div class="rating1">4 Star<span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span></span><span class="fa fa-star checked"></span></span><span class="fa fa-star"></span> </div>
+                <div class="rating1">3 Star<span class="fa fa-star checked"></span><span class="fa fa-star checked"></span></span><span class="fa fa-star checked"></span></span><span class="fa fa-star"></span><span class="fa fa-star"></span> </div>
+                <div class="rating1">2 Star<span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star"></span></span><span class="fa fa-star"></span><span class="fa fa-star"></span> </div>
             </form>
         </div>
     </div>
@@ -76,77 +74,77 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <img src="/buy-1.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand 1</h2>
                     <p class="product-short-des">short description</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <span class="price">₹300</span><span class="actual-price">₹600</span>
                 </div>
             </div>
             
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <img src="/buy-2.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand 2</h2>
                     <p class="product-short-des">product description</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <span class="price">₹300</span><span class="actual-price">₹600</span>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <img src="/buy-3.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand 3</h2>
                     <p class="product-short-des">short description</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <span class="price">₹400</span><span class="actual-price">₹800</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <img src="/buy-4.png" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand 4</h2>
                     <p class="product-short-des">short description</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <span class="price">₹300</span><span class="actual-price">₹600</span>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <img src="/buy-5.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand 5</h2>
                     <p class="product-short-des">short description</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <span class="price">₹400</span><span class="actual-price">₹800</span>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="/product-img.jpg" class="product-thumb" alt="">
+                    <img src="/buy-6.jpg" class="product-thumb" alt="">
                     <button class="card-btn">add to whislist</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand 6</h2>
                     <p class="product-short-des">short description</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <span class="price">₹350</span><span class="actual-price">₹700</span>
                 </div>
             </div>
 
