--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <div class="container">
      <div class="child-container">
             <img src="/logo.png" class="logo">
-            <p>Welcome user</p>
+            <input type="text" id="name" placeholder="name">
             <input type="email" id="email" placeholder="email-id">
             <input type="password" id="password" placeholder="password">
-            <button class="submit-btn-login">Login</button>
+            <input type="text" id="mob-no" placeholder="Mobile Number">          
+            <label for="terms-and-conditions"><input type="checkbox" class="checkbox">agree to our <a href="">terms and conditions</a></label>           
+            <label for="notification"><input type="checkbox" class="checkbox">upcoming offers and events mails</label>
+            <button class="submit-btn">Create account</button>
      
-        <a href="" class="link">Don'have an account? Sign up here</a>
+        <a href="" class="link">already have an account? Log in here</a>
     </div>
 </div>
 
