Revert "Home page"

--- a/index.html
+++ b/index.html
@@ -4,41 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ecom-xpress</title>
+    <title>Document</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://xpressui1.netlify.app/xPressUi.css">
 </head>
 <body>
-    <nav class="navbar">
-     <div class="nav">
-        <img src="/logo.png" class="brand-logo" alt="" >
-        <div class="nav-items">
-            <div class="search">
-                <input type="text" class="search-box">
-                <button class="search-btn">search</button>
-            </div>
-            <a href="http://"><i class="glyphicon glyphicon-user"></i></a>
-            <a href="http://"><i class="glyphicon glyphicon-shopping-cart"></i></a>
-        </div>
-     </div>  
+    <div class="container">
+     <div class="child-container">
+            <img src="/logo.png" class="logo">
+            <p>Welcome user</p>
+            <input type="email" id="email" placeholder="email-id">
+            <input type="password" id="password" placeholder="password">
+            <button class="submit-btn-login">Login</button>
      
-     <ul class="links-container">
-        <li class="link-item"><a href="#" class="link">Login</a></li>
-        <li class="link-item"><a href="#" class="link">Home</a></li>
-        <li class="link-item"><a href="#" class="link">Product page</a></li>
-        <li class="link-item"><a href="#" class="link">Wishlist</a></li>
-        <li class="link-item"><a href="#" class="link">My Cart</a></li>
-    </ul>
-    </nav>
-
-    <header class="hero-section">
-        <div class="content">
-            <!-- <img src="/logo.png" class="logo" alt=""> -->
-            <!-- <p class="sub-heading">best fashion collection of all time</p> -->
-        </div>
-    </header>
+        <a href="" class="link">Don'have an account? Sign up here</a>
+    </div>
+</div>
 
 </body>
 </html>
