--- a/login.html
+++ b/login.html
@@ -16,20 +16,9 @@
             <input type="password" id="password" placeholder="password">
             <button class="submit-btn-login">Login</button>
      
-     <ul class="links-container">
-        <li class="link-item"><a href="#" class="link">Login</a></li>
-        <li class="link-item"><a href="#" class="link">Home</a></li>
-        <li class="link-item"><a href="#" class="link">Product page</a></li>
-        <li class="link-item"><a href="#" class="link">Wishlist</a></li>
-        <li class="link-item"><a href="#" class="link">My Cart</a></li>
-    </ul>
-    </nav>
-
-    <header class="hero-section">
-        <div class="content">
-            
-        </div>
-    </header>
+        <a href="" class="link">Don'have an account? Sign up here</a>
+    </div>
+</div>
 
 </body>
 </html>
