--- a/product-listing.html
+++ b/product-listing.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Listing</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style-products.css">
     <link rel="stylesheet" href="https://xpressui1.netlify.app/xPressUi.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/2ea00fb38c.js" crossorigin="anonymous"></script>
