url's added to landing pages

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
      </div>  
      
      <ul class="links-container">
-        <li class="link-item"><a href="#" class="link">Login</a></li>
-        <li class="link-item"><a href="#" class="link">Home</a></li>
-        <li class="link-item"><a href="#" class="link">Product page</a></li>
-        <li class="link-item"><a href="#" class="link">Wishlist</a></li>
-        <li class="link-item"><a href="#" class="link">My Cart</a></li>
+        <li class="link-item"><a href="/login.html" class="link">Login</a></li>
+        <li class="link-item"><a href="/index.html" class="link">Home</a></li>
+        <li class="link-item"><a href="/product-listing.html" class="link">Product page</a></li>
+        <li class="link-item"><a href="/wishlist.html" class="link">Wishlist</a></li>
+        <li class="link-item"><a href="/mycart.html" class="link">My Cart</a></li>
     </ul>
     </nav>
 
