--- a/wishlist.html
+++ b/wishlist.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wishlist</title>
-    <link rel="stylesheet" href="/home-page.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
@@ -21,11 +21,11 @@
         </div>  
         
         <ul class="links-container">
-           <li class="link-item"><a href="#" class="link">Login</a></li>
-           <li class="link-item"><a href="#" class="link">Home</a></li>
-           <li class="link-item"><a href="#" class="link">Product page</a></li>
-           <li class="link-item"><a href="#" class="link">Wishlist</a></li>
-           <li class="link-item"><a href="#" class="link">My Cart</a></li>
+           <li class="link-item"><a href="/login.html" class="link">Login</a></li>
+           <li class="link-item"><a href="/index.html" class="link">Home</a></li>
+           <li class="link-item"><a href="/product-listing.html" class="link">Product page</a></li>
+           <li class="link-item"><a href="/wishlist.html" class="link">Wishlist</a></li>
+           <li class="link-item"><a href="/wishlist.html" class="link">My Cart</a></li>
        </ul>
        </nav>
 
