--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ecom-xpress</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://xpressui1.netlify.app/xPressUi.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://xpressui1.netlify.app/xPressUi.css"> -->
 </head>
 <body>
     <nav class="navbar">
@@ -19,8 +19,8 @@
                 <input type="text" class="search-box">
                 <button class="search-btn">search</button>
             </div>
-            <a href="http://"><i class="glyphicon glyphicon-user"></i></a>
-            <a href="http://"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+            <a href="http://"><img src="/user.png" alt=""></a>
+            <a href="http://"><img src="/shopping-cart.png" alt=""></a>
         </div>
      </div>  
      
@@ -33,11 +33,11 @@
     </ul>
     </nav>
 
-    <header class="hero-section">
+    <!-- <header class="hero-section">
         <div class="content">
             
         </div>
-    </header>
+    </header> -->
 
 </body>
 </html>
