bootstrap icons removed and navigation bar style changed and minor updates

--- a/mycart.html
+++ b/mycart.html
@@ -6,17 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <link rel="stylesheet" href="/mycart.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
     
     <nav class="navbar">
         <div class="nav">
-           <img src="/logo.png" class="brand-logo-cart" alt="" >
+           <img src="/logo.png" class="brand-logo-cart" alt="brand-logo" >
            <div class="nav-items">
-               <a href="http://"><i class="glyphicon glyphicon-user"></i></a>
-               <a href="http://"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+               <a href="http://"><img src="/user.png" alt="user-profile"></a>
+               <a href="http://"><img src="/shopping-cart.png" alt="shopping-cart"></a>
            </div>
         </div>  
         
