--- a/sign-up.html
+++ b/sign-up.html
@@ -11,15 +11,15 @@
     <div class="container">
      <div class="child-container">
             <img src="/logo.png" class="logo">
-            <input type="text" id="name" placeholder="name">
-            <input type="email" id="email" placeholder="email-id">
-            <input type="password" id="password" placeholder="password">
-            <input type="text" id="mob-no" placeholder="Mobile Number">          
+            <input type="text" class="name" placeholder="name">
+            <input type="email" class="email" placeholder="email-id">
+            <input type="password" class="password" placeholder="password">
+            <input type="text" class="mob-no" placeholder="Mobile Number">          
             <label for="terms-and-conditions"><input type="checkbox" class="checkbox">agree to our <a href="">terms and conditions</a></label>           
             <label for="notification"><input type="checkbox" class="checkbox">upcoming offers and events mails</label>
             <button class="submit-btn">Create account</button>
      
-        <a href="" class="link">already have an account? Log in here</a>
+        <a href="/login.html" class="link">already have an account? Log in here</a>
     </div>
 </div>
 
