--- a/wishlist.html
+++ b/wishlist.html
@@ -13,8 +13,8 @@
         <div class="nav">
            <img src="/logo.png" class="brand-logo-wishlist" alt="" >
            <div class="nav-items">
-               <a href="http://"><i class="glyphicon glyphicon-user"></i></a>
-               <a href="http://"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+               <a href="http://"><img src="/user.png" alt="user-profile"></a>
+               <a href="http://"><img src="/shopping-cart.png" alt="shopping-cart"></a>
            </div>
         </div>  
         
