--- a/wishlist.html
+++ b/wishlist.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wishlist</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/wishlist.css">
 </head>
 <body>
     
@@ -15,8 +13,8 @@
         <div class="nav">
            <img src="/logo.png" class="brand-logo-wishlist" alt="" >
            <div class="nav-items">
-               <a href="http://"><i class="glyphicon glyphicon-user"></i></a>
-               <a href="http://"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+            <a href="http://"><img src="/user.png" alt="user-profile"></a>
+            <a href="http://"><img src="/shopping-cart.png" alt="shopping-cart"></a>
            </div>
         </div>  
         
