modified paths to wshlist page

--- a/mycart.html
+++ b/mycart.html
@@ -22,7 +22,7 @@
            <li class="link-item"><a href="/index.html" class="link">Login</a></li>
            <li class="link-item"><a href="/index.html" class="link">Home</a></li>
            <li class="link-item"><a href="/product-listing.html" class="link">Product page</a></li>
-           <li class="link-item"><a href="/wishlist.html" class="link">Wishlist</a></li>
+           <li class="link-item"><a href="/wishlist1.html" class="link">Wishlist</a></li>
            <li class="link-item"><a href="/mycart.html" class="link">My Cart</a></li>
        </ul>
        </nav>
