--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <input type="text" class="search-box">
                 <button class="search-btn">search</button>
             </div>
-            <a href="http://"><img src="/user.png" alt="user-profile"></a>
-            <a href="http://"><img src="/shopping-cart.png" alt="shopping-cart"></a>
+            <a href="/login.html"><img src="/user.png" alt="user-profile"></a>
+            <a href="/mycart.html"><img src="/shopping-cart.png" alt="shopping-cart"></a>
         </div>
      </div>  
      
