--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
             <input type="password" class="password" placeholder="password">
             <button class="submit-btn-login">Login</button>
 
-        <a href="" class="link">Don'have an account? Sign up here</a>
+        <a href="/sign-up.html" class="link">Don'have an account? Sign up here</a>
     </div>
 </div>
 
