cart & user-profile urls added

--- a/mycart.html
+++ b/mycart.html
@@ -13,8 +13,8 @@
         <div class="nav">
            <img src="/logo.png" class="brand-logo-cart" alt="brand-logo" >
            <div class="nav-items">
-               <a href="http://"><img src="/user.png" alt="user-profile"></a>
-               <a href="http://"><img src="/shopping-cart.png" alt="shopping-cart"></a>
+            <a href="/login.html"><img src="/user.png" alt="user-profile"></a>
+            <a href="/mycart.html"><img src="/shopping-cart.png" alt="shopping-cart"></a>
            </div>
         </div>  
         
