--- a/wishlist1.html
+++ b/wishlist1.html
@@ -13,17 +13,17 @@
         <div class="nav">
            <img src="/logo.png" class="brand-logo-wishlist" alt="" >
            <div class="nav-items">
-            <a href="http://"><img src="/user.png" alt="user-profile"></a>
-            <a href="http://"><img src="/shopping-cart.png" alt="shopping-cart"></a>
+            <a href="/login.html"><img src="/user.png" alt="user-profile"></a>
+            <a href="/mycart.html"><img src="/shopping-cart.png" alt="shopping-cart"></a>
            </div>
         </div>  
         
         <ul class="links-container">
-           <li class="link-item"><a href="#" class="link">Login</a></li>
-           <li class="link-item"><a href="#" class="link">Home</a></li>
-           <li class="link-item"><a href="#" class="link">Product page</a></li>
-           <li class="link-item"><a href="#" class="link">Wishlist</a></li>
-           <li class="link-item"><a href="#" class="link">My Cart</a></li>
+           <li class="link-item"><a href="/login.html" class="link">Login</a></li>
+           <li class="link-item"><a href="/index.html" class="link">Home</a></li>
+           <li class="link-item"><a href="/product-listing.html" class="link">Product page</a></li>
+           <li class="link-item"><a href="/wishlist1.html" class="link">Wishlist</a></li>
+           <li class="link-item"><a href="/mycart.html" class="link">My Cart</a></li>
        </ul>
        </nav>
 
