--- a/product-listing.html
+++ b/product-listing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Listing</title>
     <link rel="stylesheet" href="/style-products.css">
-    <link rel="stylesheet" href="https://xpressui1.netlify.app/xPressUi.css">
+    <link rel="stylesheet" href="https://xpressui.netlify.app/xpressUI.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/2ea00fb38c.js" crossorigin="anonymous"></script>
 
@@ -20,8 +20,8 @@
                    <input type="text" class="search-box">
                    <button class="search-btn">search</button>
                </div>
-               <a href="http://"><i class="glyphicon glyphicon-user"></i></a>
-               <a href="http://"><i class="glyphicon glyphicon-shopping-cart"></i></a>
+               <a href="/login.html"><img src="/user.png" alt="user-profile"></a>
+               <a href="/mycart.html"><img src="/shopping-cart.png" alt="shopping-cart"></a>
            </div>
         </div>  
         
