slider class added

--- a/product-listing.html
+++ b/product-listing.html
@@ -51,7 +51,8 @@
         <div class="py-3">
             <h3 class="font-weight-bold">Pricing</h3>
             <div class="slider">
-                <a><input type="range" min="1" max="100" value="50" class="default-slider" /> ₹2000 - ₹3000</a>
+                <input type="range" min="1" max="100" value="50" class="default-slider" /> 
+                <div class="slider-value">₹2000 - ₹3000</div>
             </div>
         </div>
         <div class="py-3">
