new xpressUI.css url updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ecom-xpress</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="https://xpressui1.netlify.app/xPressUi.css">
+    <link rel="stylesheet" href="https://xpressui.netlify.app/xpressUI.css">
 </head>
 <body>
     <nav class="navbar">
