Sign-up Message added in Signup page

--- a/sign-up.html
+++ b/sign-up.html
@@ -11,6 +11,7 @@
     <div class="container">
      <div class="child-container">
             <img src="/logo.png" class="logo">
+            <p class="landing-msg">Sign up</p>
             <input type="text" class="name" placeholder="name">
             <input type="email" class="email" placeholder="email-id">
             <input type="password" class="password" placeholder="password">
